# aimless_repo

./: CMakeLists.txt  landmark_coordinate.txt  log.txt  mtcnn_label.txt  test0.pcd  train_bbx_gt.txt
src/: EuclidianCluster.cpp  Project2DLabelToRGBPcl.cpp  Project3DBox2Img.cpp  ProjectLidarPoint2Img.cpp  bin2pcd.cpp  readKitti.h  vis_pcd.cpp
